# auro-bot

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: RUNBOOK.md  index.md  power-architecture.md  project-status.md
docs/architecture/: system.md
docs/design/: voicelog-mcp.md
docs/guides/: talking-to-auro.md
docs/hardware/: ina238.md  lidar-mount.md  pi-rebuild.md
docs/notes/: 2026-06-24-next-session.md  2026-06-25-next-session.md  2026-06-26-next-session.md  brake-attempt-forensic.md  brake-attempt.patch  counter-drive-session-handoff.md
docs/operations/: autostart.md  bench-test-commands.md  claude-operator.md  voice-appliance.md  web-console.md
docs/testing/: ina238-bench-validation.md  motion-tests.md
docs/training/: aurbot-stem-curriculum.md
docs/validation/: README.md
experiments/stage3_first_slam/: first_map.pgm  first_map.yaml  stage3_summary.md
experiments/stage4_5_refinement/: confirmation_map.pgm  confirmation_map.yaml
experiments/stage4_map_repeatability/: run1_map.pgm  run1_map.yaml  run2_map.pgm  run2_map.yaml  run3_map.pgm  run3_map.yaml  stage4_summary.md
firmware/esp32s3_voice_buddy/main/: CMakeLists.txt  app_main.c  audio.c  audio.h  board_pins.h  face.c  face.h  idf_component.yml  link.c  link.h  sr.c  sr.h
firmware/makerpi_rp2040_base/: CMakeLists.txt  FLASHING.md  README.md  pico_sdk_import.cmake
firmware/makerpi_rp2040_base/include/: config.h  counter_drive.h  navbot_protocol.h  pid.h  pins.h  safety.h  serial_parser.h  telemetry.h  wheel.h
firmware/makerpi_rp2040_base/pio/: quadrature_encoder.pio
firmware/makerpi_rp2040_base/src/: counter_drive.c  main.c  pid.c  safety.c  serial_parser.c  telemetry.c  wheel.c
firmware/makerpi_rp2040_base/tools/: manual_serial_check.py
firmware/xiao_esp32s3_sense_cam/firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  phase2_camera.c  phase2_camera.h  phase3_mic.c  phase3_mic.h  phase4_sd.c  phase4_sd.h  phase5_cam_pump.c  phase5_cam_pump.h  phase5_http.c  phase5_http.h  phase5_led.c  phase5_led.h  phase5_motion.c  phase5_motion.h  phase5_net.c  phase5_net.h  phase6_mqtt.c  phase6_mqtt.h  phase6_settings.c  phase6_settings.h
maps/: office_lab.pgm  office_lab.yaml  office_lab_v2.pgm  office_lab_v2.yaml
ops/systemd/: navbot.target  (+5 more)
ros2_ws/: README.md  navbot.repos
ros2_ws/src/navbot_base/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_base/config/: heading_controller.yaml  navbot_base.yaml
ros2_ws/src/navbot_base/launch/: base_bridge.launch.py  heading_controller.launch.py
ros2_ws/src/navbot_base/navbot_base/: __init__.py  checksum.py  heading_controller.py  odometry.py  serial_bridge.py
ros2_ws/src/navbot_base/resource/: navbot_base
ros2_ws/src/navbot_bringup/: README.md  package.xml  setup.py
ros2_ws/src/navbot_bringup/launch/: base.launch.py  base_lidar.launch.py  imu_localization.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py  slam_imu.launch.py
ros2_ws/src/navbot_bringup/navbot_bringup/: __init__.py
ros2_ws/src/navbot_bringup/resource/: navbot_bringup
ros2_ws/src/navbot_camera/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_camera/config/: camera.yaml
ros2_ws/src/navbot_camera/launch/: camera.launch.py
ros2_ws/src/navbot_camera/navbot_camera/: frame_grabber.py
ros2_ws/src/navbot_description/: README.md  package.xml  setup.py
ros2_ws/src/navbot_description/launch/: robot_state_publisher.launch.py
ros2_ws/src/navbot_description/navbot_description/: __init__.py
ros2_ws/src/navbot_description/resource/: navbot_description
ros2_ws/src/navbot_description/rviz/: navbot.rviz
ros2_ws/src/navbot_description/urdf/: navbot.urdf.xacro
ros2_ws/src/navbot_localization/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_localization/config/: ekf.yaml
ros2_ws/src/navbot_localization/launch/: ekf.launch.py
ros2_ws/src/navbot_localization/resource/: navbot_localization
ros2_ws/src/navbot_power/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_power/config/: ina238.yaml
ros2_ws/src/navbot_power/launch/: ina238.launch.py
ros2_ws/src/navbot_power/navbot_power/: __init__.py  ina238_reader.py
ros2_ws/src/navbot_power/resource/: navbot_power
ros2_ws/src/navbot_teleop/: README.md  package.xml  setup.py
ros2_ws/src/navbot_teleop/launch/: teleop.launch.py
ros2_ws/src/navbot_teleop/navbot_teleop/: __init__.py
ros2_ws/src/navbot_teleop/resource/: navbot_teleop
ros2_ws/src/navbot_voice/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_voice/config/: voice_agent.yaml
ros2_ws/src/navbot_voice/launch/: voice_agent.launch.py
ros2_ws/src/navbot_voice/navbot_voice/: agent.py  camera_client.py  claude_brain.py  robot_client.py  robot_tools.py  safety.py  voice_agent.py
ros2_ws/src/navbot_voice_io/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_voice_io/config/: voice_io.yaml
ros2_ws/src/navbot_voice_io/launch/: voice_io.launch.py
ros2_ws/src/navbot_voice_io/navbot_voice_io/: buddy_brain.py  buddy_link.py  loopback_tool.py  protocol.py  remote_mic.py  voice_io_node.py
ros2_ws/src/navbot_web/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navbot_web/config/: web_console.yaml
ros2_ws/src/navbot_web/launch/: web_console.launch.py
ros2_ws/src/navbot_web/navbot_web/: __init__.py  server.py
ros2_ws/src/navbot_web/navbot_web/static/: app.js  index.html  styles.css
ros2_ws/src/navbot_web/resource/: navbot_web
scripts/: archive_firmware.sh  build_ros2_ws.sh  generate_validation_record.sh  install_autostart.sh  launch_nav.sh  launch_slam.sh  launch_slam_with_warmup.sh  launch_teleop.sh  launch_web_console.sh  multi_waypoint.py  nav_goal_probe.py  navbot_service.sh  navbotctl  remote_mic_replay.py  serial_check.sh  setup-pi.sh  soak_analyze.sh  soak_checkpoint.sh  soak_test.sh  sync_knowledge_to_mcp.sh  sync_pi_repo.sh
tests/: test_checksum.py  test_odometry.py  test_pid.py  test_serial_parser.py
(+101 files in other folders)
