<?xml version="1.0"?>
<package format="3">
  <name>navbot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch package for makerpi-rp2040-ros2-navbot.</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navbot_base</exec_depend>
  <exec_depend>navbot_description</exec_depend>
  <exec_depend>navbot_imu</exec_depend>
  <exec_depend>navbot_lidar</exec_depend>
  <exec_depend>navbot_localization</exec_depend>
  <exec_depend>navbot_slam</exec_depend>
  <exec_depend>navbot_navigation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
