<?xml version="1.0"?>
<package format="3">
  <name>navbot_camera</name>
  <version>0.1.0</version>
  <description>XIAO ESP32-S3 Sense networked camera (HTTP/JPEG) — liveness status plus a frame-grab service for the voice brain's vision.</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- The camera is a Wi-Fi board serving JPEG over HTTP (firmware/xiao_esp32s3_sense_cam);
       the grabber is a stdlib-urllib client, so no camera_ros / cv_bridge / opencv needed. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
