<?xml version="1.0"?>
<package format="3">
  <name>navbot_description</name>
  <version>0.1.0</version>
  <description>Robot description package for makerpi-rp2040-ros2-navbot.</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
