<?xml version="1.0"?>
<package format="3">
  <name>navbot_teleop</name>
  <version>0.1.0</version>
  <description>Teleop convenience package for makerpi-rp2040-ros2-navbot.</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
