<?xml version="1.0"?>
<package format="3">
  <name>navbot_voice</name>
  <version>0.1.0</version>
  <description>On-robot voice brain: wake/STT/Claude/TTS over the ESP32-S3 buddy, wrapping the navbot_web control surface.</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
