<?xml version="1.0"?>
<package format="3">
  <name>navbot_voice_io</name>
  <version>0.1.0</version>
  <description>Pi-side serial bridge to the ESP32-S3 voice buddy (mic/speaker audio, wake/stop events, face cues).</description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
